--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-	"devDependencies": {
-		"@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-		"@nomicfoundation/hardhat-toolbox-viem": "^2.0.0",
-		"@nomicfoundation/hardhat-verify": "^2.0.0",
-		"@nomicfoundation/hardhat-viem": "^1.0.0",
-		"@types/chai": "^4.2.0",
-		"@types/chai-as-promised": "^7.1.6",
-		"@types/mocha": "^10.0.6",
-		"@types/node": "^20.10.7",
-		"chai": "^4.2.0",
-		"hardhat": "^2.19.4",
-		"hardhat-deploy": "^0.11.45",
-		"hardhat-gas-reporter": "^1.0.8",
-		"solidity-coverage": "^0.8.0",
-		"ts-node": "^10.9.2",
-		"typescript": "~5.0.4",
-		"viem": "^1.15.1"
-	},
-	"dependencies": {
-		"@openzeppelin/contracts": "^5.0.1"
-	},
+  "devDependencies": {
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox-viem": "^2.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomicfoundation/hardhat-viem": "^1.0.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/chai": "^4.2.0",
+    "@types/chai-as-promised": "^7.1.6",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.7",
+    "chai": "^4.2.0",
+    "hardhat": "^2.19.4",
+    "hardhat-deploy": "^0.11.45",
+    "hardhat-gas-reporter": "^1.0.8",
+    "prettier": "3.1.1",
+    "prettier-plugin-solidity": "1.3.1",
+    "solidity-coverage": "^0.8.0",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.0.4",
+    "viem": "^1.15.1"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.0.1"
+  },
   "scripts": {
+    "format": "prettier --write .",
     "deploy": "hardhat deploy",
     "test": "hardhat test"
   }
