--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.10.7",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "hardhat": "^2.19.4",
     "hardhat-deploy": "^0.11.45",
     "hardhat-gas-reporter": "^1.0.8",
