--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "hardhat-gas-reporter": "^1.0.8",
     "prettier": "3.1.1",
     "prettier-plugin-solidity": "1.3.1",
+    "solhint": "^4.1.1",
     "solidity-coverage": "^0.8.0",
+    "solidity-docgen": "0.6.0-beta.36",
     "ts-node": "^10.9.2",
     "typescript": "~5.0.4",
     "viem": "^1.15.1"
@@ -25,8 +27,12 @@
     "@openzeppelin/contracts": "^5.0.1"
   },
   "scripts": {
-    "format": "prettier --write .",
     "deploy": "hardhat deploy",
+    "docgen": "hardhat docgen",
+    "format": "prettier --write .",
+    "mythril": "docker run --platform=linux/amd64 -v .:/tmp mythril/myth analyze /tmp/contracts/Vault.sol --solc-json /tmp/mythril.json",
+    "slither": "docker run -v .:/share trailofbits/eth-security-toolbox slither /share",
+    "solhint": "solhint contracts/**/*.sol",
     "test": "hardhat test"
   }
 }
