--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "viem": "^1.15.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.1"
+    "@openzeppelin/contracts": "^5.0.1",
+    "@openzeppelin/contracts-upgradeable": "^5.0.1"
   },
   "scripts": {
     "deploy": "hardhat deploy",
